<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailMovieContentSection1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/detailMovieContentSection2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/detailMovieImageContainer"
            android:layout_width="@dimen/img_item_size_width"
            android:layout_height="@dimen/img_item_size_height"
            app:cardCornerRadius="@dimen/corner_radius_4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/detailMovieImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/detailTextMovieTitle"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            app:layout_constraintBottom_toTopOf="@id/detailTextMovieDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailMovieImageContainer"
            app:layout_constraintTop_toTopOf="@id/detailMovieImageContainer" />

        <TextView
            android:id="@+id/detailTextMovieDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/detailTextMovieDurationLabel"
            app:layout_constraintEnd_toEndOf="@id/detailTextMovieTitle"
            app:layout_constraintStart_toStartOf="@id/detailTextMovieTitle"
            app:layout_constraintTop_toBottomOf="@id/detailTextMovieTitle" />

        <TextView
            android:id="@+id/detailTextMovieDurationLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintBottom_toTopOf="@id/detailTextMovieDuration"
            app:layout_constraintEnd_toStartOf="@id/detailTextMovieLanguageLabel"
            app:layout_constraintStart_toStartOf="@id/detailTextMovieDate"
            app:layout_constraintTop_toBottomOf="@id/detailTextMovieDate" />

        <TextView
            android:id="@+id/detailTextMovieLanguageLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detailTextMovieDurationLabel"
            app:layout_constraintEnd_toEndOf="@id/detailTextMovieDate"
            app:layout_constraintStart_toEndOf="@id/detailTextMovieDurationLabel"
            app:layout_constraintTop_toTopOf="@id/detailTextMovieDurationLabel" />

        <TextView
            android:id="@+id/detailTextMovieDuration"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/detailTextMovieBudgetLabel"
            app:layout_constraintEnd_toStartOf="@id/detailTextMovieLanguage"
            app:layout_constraintStart_toEndOf="@id/detailTextMovieDate"
            app:layout_constraintStart_toStartOf="@id/detailTextMovieDurationLabel"
            app:layout_constraintTop_toBottomOf="@id/detailTextMovieDurationLabel" />

        <TextView
            android:id="@+id/detailTextMovieLanguage"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detailTextMovieDuration"
            app:layout_constraintEnd_toEndOf="@id/detailTextMovieLanguageLabel"
            app:layout_constraintStart_toEndOf="@id/detailTextMovieDuration"
            app:layout_constraintTop_toTopOf="@id/detailTextMovieDuration" />

        <TextView
            android:id="@+id/detailTextMovieBudgetLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintBottom_toTopOf="@id/detailTextMovieBudget"
            app:layout_constraintEnd_toStartOf="@id/detailTextMovieRevenueLabel"
            app:layout_constraintStart_toStartOf="@id/detailTextMovieDuration"
            app:layout_constraintTop_toBottomOf="@id/detailTextMovieDuration" />

        <TextView
            android:id="@+id/detailTextMovieRevenueLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detailTextMovieBudgetLabel"
            app:layout_constraintEnd_toEndOf="@id/detailTextMovieLanguage"
            app:layout_constraintStart_toEndOf="@id/detailTextMovieBudgetLabel"
            app:layout_constraintTop_toTopOf="@id/detailTextMovieBudgetLabel" />

        <TextView

            android:id="@+id/detailTextMovieBudget"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detailMovieImageContainer"
            app:layout_constraintEnd_toStartOf="@id/detailTextMovieRevenue"
            app:layout_constraintStart_toStartOf="@id/detailTextMovieBudgetLabel"
            app:layout_constraintTop_toBottomOf="@id/detailTextMovieBudgetLabel" />

        <TextView
            android:id="@+id/detailTextMovieRevenue"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detailTextMovieBudget"
            app:layout_constraintEnd_toEndOf="@id/detailTextMovieRevenueLabel"
            app:layout_constraintStart_toEndOf="@id/detailTextMovieBudget"
            app:layout_constraintTop_toTopOf="@id/detailTextMovieBudget" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/detailMovieContentSection2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/detailMovieContentSection1"
        app:layout_constraintStart_toStartOf="@id/detailMovieContentSection1"
        app:layout_constraintTop_toBottomOf="@id/detailMovieContentSection1">

        <TextView
            android:id="@+id/detailTextMovieGenreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/detailMovieGenresContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:dividerDrawable="@drawable/divider"
            app:flexWrap="wrap"
            app:showDivider="middle">

        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:id="@+id/detailTextMovieOverviewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp" />

        <TextView
            android:id="@+id/detailTextMovieOverview"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerMovieDetailContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/detail_placeholder" />

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

