<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailTvShowcontentSection1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/detailTvShowcontentSection2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/detailTvShowImageContainer"
            android:layout_width="@dimen/img_item_size_width"
            android:layout_height="@dimen/img_item_size_height"
            app:cardCornerRadius="@dimen/corner_radius_4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/detailTvShowImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tv_show_image_description"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/detailTextTvShowTitle"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            app:layout_constraintBottom_toTopOf="@id/detailTextTvShowDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailTvShowImageContainer"
            app:layout_constraintTop_toTopOf="@id/detailTvShowImageContainer" />

        <TextView
            android:id="@+id/detailTextTvShowDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/detailTextTvShowDurationLabel"
            app:layout_constraintEnd_toEndOf="@id/detailTextTvShowTitle"
            app:layout_constraintStart_toStartOf="@id/detailTextTvShowTitle"
            app:layout_constraintTop_toBottomOf="@id/detailTextTvShowTitle" />

        <TextView
            android:id="@+id/detailTextTvShowDurationLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintBottom_toTopOf="@id/detailTextTvShowDuration"
            app:layout_constraintEnd_toStartOf="@id/detailTextTvShowLanguageLabel"
            app:layout_constraintStart_toStartOf="@id/detailTextTvShowDate"
            app:layout_constraintTop_toBottomOf="@id/detailTextTvShowDate" />

        <TextView
            android:id="@+id/detailTextTvShowLanguageLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detailTextTvShowDurationLabel"
            app:layout_constraintEnd_toEndOf="@id/detailTextTvShowDate"
            app:layout_constraintStart_toEndOf="@id/detailTextTvShowDurationLabel"
            app:layout_constraintTop_toTopOf="@id/detailTextTvShowDurationLabel" />

        <TextView
            android:id="@+id/detailTextTvShowDuration"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/detailTextTvShowTypeLabel"
            app:layout_constraintEnd_toStartOf="@id/detailTextTvShowLanguage"
            app:layout_constraintStart_toEndOf="@id/detailTextTvShowDate"
            app:layout_constraintStart_toStartOf="@id/detailTextTvShowDurationLabel"
            app:layout_constraintTop_toBottomOf="@id/detailTextTvShowDurationLabel" />

        <TextView
            android:id="@+id/detailTextTvShowLanguage"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detailTextTvShowDuration"
            app:layout_constraintEnd_toEndOf="@id/detailTextTvShowLanguageLabel"
            app:layout_constraintStart_toEndOf="@id/detailTextTvShowDuration"
            app:layout_constraintTop_toTopOf="@id/detailTextTvShowDuration"
            tools:text="English" />

        <TextView
            android:id="@+id/detailTextTvShowTypeLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:layout_constraintBottom_toTopOf="@id/detailTextTvShowType"
            app:layout_constraintEnd_toStartOf="@id/detailTextTvShowStatusLabel"
            app:layout_constraintStart_toStartOf="@id/detailTextTvShowDuration"
            app:layout_constraintTop_toBottomOf="@id/detailTextTvShowDuration" />

        <TextView
            android:id="@+id/detailTextTvShowStatusLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detailTextTvShowTypeLabel"
            app:layout_constraintEnd_toEndOf="@id/detailTextTvShowLanguage"
            app:layout_constraintStart_toEndOf="@id/detailTextTvShowTypeLabel"
            app:layout_constraintTop_toTopOf="@id/detailTextTvShowTypeLabel" />

        <TextView

            android:id="@+id/detailTextTvShowType"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detailTvShowImageContainer"
            app:layout_constraintEnd_toStartOf="@id/detailTextTvShowStatus"
            app:layout_constraintStart_toStartOf="@id/detailTextTvShowTypeLabel"
            app:layout_constraintTop_toBottomOf="@id/detailTextTvShowTypeLabel" />

        <TextView
            android:id="@+id/detailTextTvShowStatus"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/detailTextTvShowType"
            app:layout_constraintEnd_toEndOf="@id/detailTextTvShowStatusLabel"
            app:layout_constraintStart_toEndOf="@id/detailTextTvShowType"
            app:layout_constraintTop_toTopOf="@id/detailTextTvShowType" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/detailTvShowcontentSection2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/detailTvShowcontentSection1"
        app:layout_constraintStart_toStartOf="@id/detailTvShowcontentSection1"
        app:layout_constraintTop_toBottomOf="@id/detailTvShowcontentSection1">

        <TextView
            android:id="@+id/detailTextTvShowGenreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/detailTvShowGenresContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            app:dividerDrawable="@drawable/divider"
            app:flexWrap="wrap"
            app:showDivider="middle">

        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:id="@+id/detailTextTvShowOverviewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp" />

        <TextView
            android:id="@+id/detailTextTvShowOverview"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerTvShowDetailContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/detail_placeholder" />

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

