...
        <item>@drawable/tv_show_poster_the_simpson</item>
        <item>@drawable/tv_show_poster_the_umbrella</item>
        <item>@drawable/tv_show_poster_the_walking_dead</item>
    </array>

    <string-array name="tv_show_titles">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Gotham</item>
...
        <item>animation;comedy</item>
        <item>action;adventure;science fiction;fantasy</item>
        <item>action;adventure;drama;science fiction;fantasy</item>
    </string-array>

    <string-array name="tv_show_types">
        <item>Scripted</item>
        <item>Scripted</item>
        <item>Scripted</item>
        <item>Scripted</item>
        <item>Scripted</item>
        <item>Scripted</item>
        <item>Scripted</item>
...
