<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.movie.MovieFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movieRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerMovieContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/item_placeholder" />

            <include layout="@layout/item_placeholder" />

            <include layout="@layout/item_placeholder" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>


</FrameLayout>